# ChangelogAgent

./: .gitignore  README.md  main.py  pyproject.toml
ContextDocs/: anthropic_changelog_kb.md
app/: agent.py  config.py  llm.py  prompt.py  tools.py  vector_store.py
static/: index.html  script.js  styles.css
uploads/: anthropic_changelog_kb.md
